# bayesKM

./: .gitignore  batch_pyidl.txt  bayes_kineticmodel.docx  bowsher_labelimg.pro  fabber_sino.pro  fabber_sino_parallel.pro  fabber_steps.docx  formatlab.sav  mcmc_1tp_py.pro  mcmc_1tpc.pro  memc.pro  mk6240_test.pro  phantomdynamic_c1c2.pro  sortseries.m  testtpcfit.pro  todo.txt
DynamicBrainPhantom/: Error_Estimate_Plot.pro  brain.mat  create_phantom.m  create_phantom_pct.pro  fit_patient_pct.pro  fit_phantom_pct.pro  mask_patient.roi  pct_bbbp.pro  pct_bsvd.pro  pctworksapce.code-workspace  perfusion_fitrecon.pro  perfusion_gen_phantom.pro  plasma_c.txt  plasma_t.txt  pp_gauss_from_fwhm.pro  show_phantom.m  simulate_motion0.pro  strokecreator.fig  tissueclasses.m
DynamicBrainPhantom/patlak_old/: brain.mat  create_phantom.m  perfusion_phantom_patlak.pro  perfusion_recons.pro  rat_pose_data_5s_email.txt  strokecreator.m
fit_pros/: CMakeLists.txt  Makefile  bootstrapr.cxx  fit_srtm.c  fitk2.c  fitk4.c  gaussdev.cxx  logan_idl.c  mbf_idl.c  mrtm_idl.c  patlak_idl.c  pct_idl.c  pearson.c  powell.cxx  qr.c  regfur_idl.c  simplex.c  srtm_idl.c  srtm_idl.cpp  tcm1_idl.c  tcm2_idl.c  tcm2_reverse_idl.c  testOptim.cpp  testOptim.cxx  tgo.c  tgo.cxx  tgo.h  tpccm.h
fit_pros/examples/: Makefile  bobyqa.cxx  nnls.cxx  petc99.cxx  testOptim.cxx  tgo.cxx  tgo.h
fit_pros/examples/include/: libtpcmisc.h
fit_pros/include/: libtpcmodel.h  srtm_idl.h  tcm2_idl.h
fit_pros/optimlib/: de.cpp  de_prmm.cpp  newton.cpp  nm.cpp  pso.cpp
mcmc_pros/: Makefile  debugstan.txt  mcmc_1tpc.pro  mcmc_2cpt_.pro  mcmc_2tpc.pro  mcmc_test.pro  rwmh_tac_1tpc.cpp  rwmh_tac_2tpc.cpp  rwmh_tac_2tpc.h  sim1cm.cpp  simpct.cpp  stanidl.py
memc_pros/: CMakeCache.txt  CMakeLists.txt  CMakeLists_debug.txt  Makefile  cmake_install.cmake  debug.txt  fitIndex.txt  frameIndex.txt  libtpcimgp.h  libtpcmodext.h  meKineticRigid.h  meKineticRigid_bak.cxx  meKineticRigid_debug.cxx  mekineticrigid.cxx  memc.pro  patlak_c.cxx  plasma_c.txt  plasma_t.txt  plasma_tt.txt  rigmotion.txt  spline.cxx  tpcclibConfig.h  writeAscii.pro
memc_pros/include/: libtpccurveio.h  libtpcimgio.h  libtpcimgp.h  libtpcmisc.h  libtpcmodel.h  libtpcmodext.h  libtpcsvg.h
memc_pros/libtpccurveio/: CMakeLists.txt  cpt.c  dftdecayc.c  dftio.c  dftres.c  if.c  tsv.c  xeleris.c
memc_pros/libtpcimgio/: CMakeLists.txt  dcm.c  ecat63h.c  ecat63ml.c  ecat63r.c  ecat7h.c  ecat7ift.c  ecat7ml.c  ecat7p.c  img_e63.c  img_e7.c  imgcomp.c  imgminmax.c  interfile.c  ird.c  pixel.c  sif.c  vol.c  weight.c
memc_pros/libtpcimgp/: CMakeLists.txt  imgarithm.c  imgscanner.c  imgthreshold.c  imgtransform.c  mask.c  point.c
memc_pros/libtpcmisc/: CMakeLists.txt  branch.c  datetime.c  decpoint.c  doubleutil.c  filename.c  iftfile.c  iftsrch.c  readfile.c  rname.c  strext.c  studynr.c  substitutions.c
memc_pros/libtpcmodel/: CMakeLists.txt  bootstrap.c  integr.c  llsqwt.c  lms.c  nnls.c  normaldistr.c  pearson.c  simplex.c  simulate.c  tgo.c
memc_pros/libtpcmodext/: CMakeLists.txt  cluster_tac.c  dftinput.c  dftint.c  extrapolate.c  fittime.c  img_k1.c  img_mtga.c  misc_model.c  mrl.c  plotdata.c  plotfit.c  units_check.c
memc_pros/libtpcsvg/: CMakeLists.txt  axis.c  svg_defs.c  svg_file.c  svg_vport.c
sim_pros/: convolut_idl.c  sifio.c  sim2cm.c  sim2cm_idl.c  simLogan.c  simPatlak_idl.c  simpct.c  simpct_idl.c  simsrtm_idl.c  simulate.c
vb_pros/: batchmake.sh  fwdmodel.cc  fwdmodel_pet.h  fwdmodel_pet_c1.cc  fwdmodel_pet_c2.cc  fwdmodel_pet_c2.h  howtoaddamodel.docx  inference_nlls.cc  inference_vb.cc  inference_vb.h  noisemodel_white.cc  noisepattern.txt  phantomdynamic.pro  phantomdynamic_c2.pro  priors.cc  priors.h
vb_pros/fabber_linear/: Makefile  cmds.txt  depend.mk  fwdmodel_linear1.h  pet_models.h
vb_pros/fabber_pet_c1/: Makefile  depend.mk
vb_pros/fabber_pet_c2/: Makefile  depend.mk  tpccm.h
